--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "directories": {
     "example": "example"
   },
-  "dependencies": {},
+  "dependencies": {
+    "bluebird": "^3.4.1",
+    "invariant": "^2.2.1",
+    "redis": "^2.6.2"
+  },
   "devDependencies": {
     "babel-core": "6.7.6",
     "babel-eslint": "^6.0.4",
