--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-stage-0": "6.5.0",
     "eslint": "^2.9.0",
     "eslint-config-esayemm": "^0.1.2",
+    "expect": "^1.20.2",
     "mocha": "^2.5.3",
     "should": "^9.0.0"
   },
